# radar

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DateTimePage.qml  EventPage.qml  LICENSE  LICENSE.md  LocationPage.qml  README.md  ResultsPage.qml  all_countries.cpp  all_countries.h  app.cpp  app.h  build-android-debug.sh  build-android-release.sh  build.sh  database.cpp  database.h  db.sqlite  eventsmodel.cpp  eventsmodel.h  license_template.txt  locationprovider.cpp  locationprovider.h  main.cpp  main.qml  map.qml  qml.qrc  qml_desktop.qrc  qtquickcontrols2.conf  radar-app.pro  resources.qrc  translations.qrc
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/values/: strings.xml  styles.xml
android/res/values-de/: strings.xml
android/res/values-ru/: strings.xml
data/: db.sqlite
fastlane/metadata/android/de/: full_description.txt  title.txt
fastlane/metadata/android/en-US/: full_description.txt  title.txt
fastlane/metadata/android/ru/: full_description.txt  title.txt
fdroiddata/metadata/: org.radar.app.yml
fdroiddata/metadata/org.radar.app/de/: summary.txt
fdroiddata/metadata/org.radar.app/en-US/: summary.txt
fdroiddata/metadata/org.radar.app/ru/: summary.txt
fonts/: create_icon_font.sh  fonts.qrc  used_glyphs.txt
i18n/: radar_de.qm  radar_de.ts  radar_en.ts  radar_ru.qm  radar_ru.ts
icons/radar/: index.theme
scripts/: Setenv-android.sh  build.sh  env.sh
src/: all_countries.cpp  all_countries.h  app.cpp  app.h  database.cpp  database.h  eventsmodel.cpp  eventsmodel.h  locationprovider.cpp  locationprovider.h  main.cpp
ui/: EventPage.qml  EventView.qml  Icon.js  IconButton.qml  LocationPage.qml  ResultsPage.qml  main.qml  map.qml
